--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
+    "scss-lint": "0.0.0",
     "webpack": "^3.0.0",
     "webpack-stream": "^4.0.0"
   },
